tests/ui/consts/const-eval/conditional_array_execution.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/conditional_array_execution.rs:3:19
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   |                   ^^^^^ attempt to compute `5_u32 - 6_u32`, which would overflow

note: erroneous constant used
  --> $DIR/conditional_array_execution.rs:7:20
   |
LL |     println!("{}", FOO);
   |                    ^^^

note: erroneous constant used
  --> $DIR/conditional_array_execution.rs:7:20
   |
LL |     println!("{}", FOO);
   |                    ^^^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
  --> $DIR/conditional_array_execution.rs:7:20
   |
LL |     println!("{}", FOO);
   |                    ^^^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
